@@ -2,8 +2,10 @@ ikiwiki (3.03) UNRELEASED; urgency=low
 
   * Avoid feeding decoded unicode to Term::ReadLine.
     Closes: 512169
-  * blogspam: Log spam info on failure.
+  * blogspam: Log spam info on failure in debug mode.
   * Remove nonstandard css. Closes: #512378
+  * blogspam: Fix use of blogspam_options and blogspam_server
+    config settings.
 
  -- Joey Hess <joeyh@debian.org>  Sun, 18 Jan 2009 14:50:57 -0500
 
